src/objects/QPMS__Defect__c.object
<CustomObject>
    <description>List of defect codes that will be used by the system. In other word, this is the library of defect codes.</description>
    <fields>
        <fullName>QPMS__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Count_Compare_Date__c</fullName>
        <formula>NOW() - QPMS__Count_Compare_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Compare Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Count_Compare_Value__c</fullName>
        <formula>IF(
   ISPICKVAL( QPMS__Count_Total_Time_Unit__c, &quot;Day&quot;),1*  QPMS__Count_Total_Time_as_Num__c ,
   IF(ISPICKVAL(QPMS__Count_Total_Time_Unit__c, &quot;Week&quot;),7* QPMS__Count_Total_Time_as_Num__c,
      IF(ISPICKVAL(QPMS__Count_Total_Time_Unit__c, &quot;Month&quot;),30* QPMS__Count_Total_Time_as_Num__c,
         IF(ISPICKVAL(QPMS__Count_Total_Time_Unit__c, &quot;Year&quot;),365* QPMS__Count_Total_Time_as_Num__c,0)  
        )
      )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Compare Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Count_Total_Time_Unit__c</fullName>
        <label>Count Total Time Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Count_Total_Time__c</fullName>
        <description>This needs to be deleted.</description>
        <label>Count Total Time</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Count_Total_Time_as_Num__c</fullName>
        <label>Count Total Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Count_Total__c</fullName>
        <description>This needs to be deleted.</description>
        <label>Count Total</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Count_Total_as_Num__c</fullName>
        <label>Count Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Defect_Category__c</fullName>
        <label>Defect Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Val1</fullName>
                </value>
                <value>
                    <fullName>Val2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Defect_Classification__c</fullName>
        <label>Defect Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Val1</fullName>
                </value>
                <value>
                    <fullName>Va2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Defect_Code__c</fullName>
        <externalId>true</externalId>
        <label>Defect Code</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Defect_Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Defect_Description__c</fullName>
        <label>Defect Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Defect_Occurance__c</fullName>
        <label>Defect Occurance</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Defect__c</fullName>
        <formula>Name + IF(ISBLANK(QPMS__Defect_Code__c), &apos;&apos;, &apos;(&apos; + QPMS__Defect_Code__c + &apos;)&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defect</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__NC_Defect_Total_Count__c</fullName>
        <label>NC Defect Total Count</label>
        <summaryForeignKey>QPMS__NC_Product_Defect__c.QPMS__Defect__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>QPMS__NC_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Process_Count__c</fullName>
        <label>Process Count</label>
        <summaryForeignKey>QPMS__Process_Defect__c.QPMS__Defect__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>QPMS__Product_Count__c</fullName>
        <label>Product Count</label>
        <summaryForeignKey>QPMS__Product_Defect__c.QPMS__Defect__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>QPMS__Risk_Severity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Severity</label>
        <referenceTo>QPMS__Risk_Severity__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Suspect_Enabled__c</fullName>
        <label>Suspect Enabled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <description>Needs to be deleted.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Volume_Compare_Date__c</fullName>
        <formula>NOW() - QPMS__Volume_Compare_Value__c</formula>
        <label>Volume Compare Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QPMS__Volume_Compare_Value__c</fullName>
        <formula>IF(
   ISPICKVAL(QPMS__Volume_Total_Time_Unit__c, &quot;Day&quot;),1* QPMS__Volume_Total_Time_as_Num__c,
   IF(ISPICKVAL(QPMS__Volume_Total_Time_Unit__c, &quot;Week&quot;),7* QPMS__Volume_Total_Time_as_Num__c,
      IF(ISPICKVAL(QPMS__Volume_Total_Time_Unit__c, &quot;Month&quot;),30* QPMS__Volume_Total_Time_as_Num__c,
         IF(ISPICKVAL(QPMS__Volume_Total_Time_Unit__c, &quot;Year&quot;),365* QPMS__Volume_Total_Time_as_Num__c,0)  
        )
      )
)</formula>
        <label>Volume Compare Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Volume_Total_Time_Unit__c</fullName>
        <label>Volume Total  Time Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Volume_Total_Time__c</fullName>
        <label>Volume Total Time</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Volume_Total_Time_as_Num__c</fullName>
        <label>Volume Total Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Volume_Total__c</fullName>
        <label>Volume Total</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Volume_Total_as_Num__c</fullName>
        <label>Volume Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Defect</label>
    <listViews>
        <fullName>QPMS__All_Defects</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Active__c</columns>
        <columns>QPMS__Defect_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Defects</label>
    </listViews>
    <nameField>
        <label>Defect Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Defects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>